--- a/_config.yml
+++ b/_config.yml
@@ -70,8 +70,11 @@ index_generator:
 
 # Category & Tag
 default_category: uncategorized
-category_map: #筆記
-tag_map: #Hexo #Next
+category_map: 筆記
+tag_map: 
+  - Hexo
+  - Git 
+  - JavaScript 
 
 # Metadata elements
 ## https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
